// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneNumberListContainer /> render() should render Candu selector without numbers 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Phone numbers
    </h1>
    <div>
      <button
        aria-disabled="false"
        class="wrapper fill primary medium"
        type="button"
      >
        <span>
          Add Phone Number
        </span>
      </button>
    </div>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div>
      Create a phone number in Gorgias to connect Voice and SMS capabilities.
    </div>
    <div
      class="row"
    >
      <div
        data-candu-id="phone-numbers-empty-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`<PhoneNumberListContainer /> render() should render with a number 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Phone numbers
    </h1>
    <div>
      <button
        aria-disabled="false"
        class="wrapper fill primary medium"
        type="button"
      >
        <span>
          Add Phone Number
        </span>
      </button>
    </div>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div>
      Create a phone number in Gorgias to connect Voice and SMS capabilities.
    </div>
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 500px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
      </div>
    </div>
  </div>
</div>
`;
